healthcheck_app1_complete.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  creationTimestamp: null
  labels:
    run: app1
  name: app1

spec:
  selector:
    matchLabels:
      run: app1
  replicas: 10
  strategy:
    type: RollingUpdate

  template:

    metadata:
      creationTimestamp: null
      labels:
        run: app1
      name: app1
    spec:
      containers:
      - image: nginx:1.19
        name: app1
        resources: {} # CPU & memory: request (minimum) & limit (maximum)
        readinessProbe:
          httpGet:
            port: 80
            path: /cmhealthcheck
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
        volumeMounts:
        - name: cm-volume
          mountPath: /usr/share/nginx/html
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: cm-volume
        configMap:
        # Provide the name of the ConfigMap containing the files you want
        # to add to the container
          name: files-cm
status: {}
