healthcheck_app1.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  creationTimestamp: null
  labels:
    run: app1
  name: app1

spec:
  selector:
    matchLabels:
      run: app1
  replicas: 10
  strategy:
    type: RollingUpdate

  template:

    metadata:
      creationTimestamp: null
      labels:
        run: app1
      name: app1
    spec:
      containers:
      - image: nginx:1.19
        name: app1
        resources: {} # CPU & memory: request (minimum) & limit (maximum)
        readinessProbe:
          tcpSocket:
            port: 8080
        livenessProbe:
          tcpSocket:
            port: 80
        volumeMounts:
        - name: cm-volume
          mountPath: /usr/nginx/www/html/test
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: cm-volume
        configMap:
        # Provide the name of the ConfigMap containing the files you want
        # to add to the container
          name: files-cm
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: app1
  name: app1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  selector:
    run: app1
  type: NodePort
status:
  loadBalancer: {}
